    - small fix in debug code

  [ Michael Vogt ]
  * merged lp:~mpt/software-center/basic-css, improves the
    style of the purchase dialog (thanks!)
  * merged lp:~mmcg069/software-center/small-fixes that fixes
    minor drawing error with the paging dot drawing outside its 
    allocated area (thanks!)
  * merged lp:~mpt/software-center/help-3.0 (thanks!)

  [ Kiwinote ]
  * softwarecenter/view/appdetailsview_gtk.py:
    - set action_bar.pkg_state as well as local state 
      (LP: #629230, LP: #632889)
      this means that the button will always take the right action
      (testcase: click 'install', cancel auth, click 'install', auth)
    - don't show warning in pkgstatusbar while transaction is in progress,
      instead show 'installing..', 'updating..', etc
      (test case: install any deb file and watch the pkgstatusbar)
  * softwarecenter/view/catview.py:
    - sort categories alphabetically (LP: #633238)
  * softwarecenter/view/catview_gtk.py:
    - skip the carousel transition if we are hovering above a poster, or if
      the poster is selected (ie hold down mouse, but don't release)

  [ Mohamed Amine IL Idrissi ]
  * Fix bug that allowed silent removal of conflicting packages
    (LP: #554319)
  * Fix missing icons in the remove alerts

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 08 Sep 2010 14:26:26 +0200

software-center (2.1.16.1) maverick; urgency=low

  [ Kiwinote ]
  * softwarecenter/app.py:
    - allow us to 'upgrade' deb files again
  * softwarecenter/view/widgets/pathbar_gtk_atk.py:
    - fix visual corruption on appending pathbar part
      (testcase: channelpane > details > different channelpane > details)
      this time without causing regressions
      (testcase: browse to any app with a screenshot)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 07 Sep 2010 17:02:52 +0200

software-center (2.1.16) maverick; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/purchasedialog.py: