@@ -17,28 +17,37 @@
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 
 
-import json
+
+# don't use dbus, triggers a gwibber start
+
+#import json
 #from dbus.mainloop.glib import DBusGMainLoop
-
 #DBusGMainLoop(set_as_default=True)
+# try:
+#     from gwibber.lib import GwibberPublic
+#     _gwibber_is_available = True
+#     Gwibber = GwibberPublic()
+#     Gwibber.service.refresh()
+# except:
+#     _gwibber_is_available = False
 
-try:
-    from gwibber.lib import GwibberPublic
-    _gwibber_is_available = True
-    Gwibber = GwibberPublic()
-    Gwibber.service.refresh()
-except:
-    _gwibber_is_available = False
 
+# def gwibber_service_available():
+#     if not _gwibber_is_available:
+#         return False
+#     return len(json.loads(Gwibber.GetAccounts())) > 0
 
-def gwibber_service_available():
-    if not _gwibber_is_available:
-        return False
-    return len(json.loads(Gwibber.GetAccounts())) > 0
-
-GWIBBER_SERVICE_AVAILABLE = gwibber_service_available()
+#GWIBBER_SERVICE_AVAILABLE = gwibber_service_available()
 #print 'Gwibber Serice Available: %s' % GWIBBER_SERVICE_AVAILABLE 
 
+def gwibber_has_accounts_in_gconf():
+    import gconf
+    client = gconf.client_get_default()
+    v = client.get("/apps/gwibber/accounts/index")
+    if v:
+        return True
+    return False
 
+GWIBBER_SERVICE_AVAILABLE = gwibber_has_accounts_in_gconf()
 
 
